crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_recovery_missing_expr.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
fun main() {
    while () {}
    for (i in ) {}
}

TOKENS:
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "main"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
NEWLINE "\n"
WHITESPACE "    "
FOR_KW "for"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "i"
WHITESPACE " "
IN_KW "in"
WHITESPACE " "
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..50
  IMPORT_LIST@0..0
  FUNCTION_DECL@0..49
    FUN_KW@0..3 "fun"
    WHITESPACE@3..4 " "
    IDENTIFIER@4..8 "main"
    VALUE_PARAMETERS@8..10
      L_PAREN@8..9 "("
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    BLOCK@11..49
      L_BRACE@11..12 "{"
      NEWLINE@12..13 "\n"
      WHITESPACE@13..17 "    "
      WHILE_STATEMENT@17..28
        WHILE_KW@17..22 "while"
        WHITESPACE@22..23 " "
        L_PAREN@23..24 "("
        PRIMARY_EXPRESSION@24..24
        R_PAREN@24..25 ")"
        WHITESPACE@25..26 " "
        BLOCK@26..28
          L_BRACE@26..27 "{"
          R_BRACE@27..28 "}"
      NEWLINE@28..29 "\n"
      WHITESPACE@29..33 "    "
      FOR_STATEMENT@33..47
        FOR_KW@33..36 "for"
        WHITESPACE@36..37 " "
        L_PAREN@37..38 "("
        VARIABLE_DECLARATION@38..39
          IDENTIFIER@38..39 "i"
        WHITESPACE@39..40 " "
        IN_KW@40..42 "in"
        WHITESPACE@42..43 " "
        PRIMARY_EXPRESSION@43..43
        R_PAREN@43..44 ")"
        WHITESPACE@44..45 " "
        BLOCK@45..47
          L_BRACE@45..46 "{"
          R_BRACE@46..47 "}"
      NEWLINE@47..48 "\n"
      R_BRACE@48..49 "}"
  NEWLINE@49..50 "\n"
