crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_semicolons_only.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
;;;

TOKENS:
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..4
  IMPORT_LIST@0..0
  SEMICOLON@0..1 ";"
  SEMICOLON@1..2 ";"
  SEMICOLON@2..3 ";"
  NEWLINE@3..4 "\n"
