crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_when_unexpected_r_bracket.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
fun f() {
    when { ] }
}

TOKENS:
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
WHEN_KW "when"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
R_BRACKET "]"
WHITESPACE " "
R_BRACE "}"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..27
  IMPORT_LIST@0..0
  FUNCTION_DECL@0..26
    FUN_KW@0..3 "fun"
    WHITESPACE@3..4 " "
    IDENTIFIER@4..5 "f"
    VALUE_PARAMETERS@5..7
      L_PAREN@5..6 "("
      R_PAREN@6..7 ")"
    WHITESPACE@7..8 " "
    BLOCK@8..26
      L_BRACE@8..9 "{"
      NEWLINE@9..10 "\n"
      WHITESPACE@10..14 "    "
      EXPRESSION_STATEMENT@14..24
        WHEN_EXPRESSION@14..24
          WHEN_KW@14..18 "when"
          WHITESPACE@18..19 " "
          L_BRACE@19..20 "{"
          WHITESPACE@20..21 " "
          WHEN_ENTRY@21..21
            PRIMARY_EXPRESSION@21..21
            MISSING@21..21
            EXPRESSION_STATEMENT@21..21
              PRIMARY_EXPRESSION@21..21
          R_BRACKET@21..22 "]"
          WHITESPACE@22..23 " "
          R_BRACE@23..24 "}"
      NEWLINE@24..25 "\n"
      R_BRACE@25..26 "}"
  NEWLINE@26..27 "\n"
